:wrench: fix: Fixed file URIs and styling

--- a/frontend/pages/html/cadastro.html
+++ b/frontend/pages/html/cadastro.html
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>PT CJR</title>
-        <meta charset="utf-8" />
-        <link rel="stylesheet" href="../css/style.css" type="text/css" />
-    </head>
-    <body>
-        <div class="cabecalho">
-            <button class="login">Entrar</button>
-            <button class="singup">Criar conta</button>
-            <div class="logo">
-            </div>
+
+<head>
+    <title>PT CJR</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="../css/style.css" type="text/css" />
+</head>
+
+<body>
+    <header class="cabecalho">
+        <button class="login">Entrar</button>
+        <button class="singup">Criar conta</button>
+        <div class="logo">
         </div>
-        <div class="corpo">
-            <div class="form">
-                <form>
-                    <div class="input-container">
-                        <input type="text" name="email" placeholder="Email"/>
-                    </div>
-                    <div class="input-container">
-                        <input type="password" name="senha" placeholder="Senha"/>
-                    </div>
-                    <div class="input-container">
-                        <input type="text" name="nome" placeholder="Nome"/>
-                    </div>
-                    <div class="input-container">
-                        <input type="text" name="gênero" placeholder="Gênero"/>
-                    </div>
-                    <div class="input-container">
-                        <input type="text" name="cargo" placeholder="Cargo"/>
-                    </div>
-                        <a href="http://">Já possui conta? Acesse aqui</a>
-                        <button class="cadastrar">Cadastrar</button>
-                    
-                </form>
-            </div>
+    </header>
+    <div class="corpo">
+        <div class="form">
+            <form>
+                <div class="input-container">
+                    <input type="text" name="email" placeholder="Email" />
+                </div>
+                <div class="input-container">
+                    <input type="password" name="senha" placeholder="Senha" />
+                </div>
+                <div class="input-container">
+                    <input type="text" name="nome" placeholder="Nome" />
+                </div>
+                <div class="input-container">
+                    <input type="text" name="gênero" placeholder="Gênero" />
+                </div>
+                <div class="input-container">
+                    <input type="text" name="cargo" placeholder="Cargo" />
+                </div>
+                <a href="http://">Já possui conta? Acesse aqui</a>
+                <button class="cadastrar">Cadastrar</button>
+
+            </form>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
