:sparkle: feat: Added signup fetch multiparty form with data and file

--- a/backend/frontend/pages/html/cadastro.html
+++ b/backend/frontend/pages/html/cadastro.html
@@ -27,26 +27,26 @@
         </span>
         <form class="form" id="form">
             <label for="perfil">
-                <img src="../../src/imagens/ph_user-circle-thinicon-cadastro.png" style="height: 200px;" />
+                <img src="../../src/imagens/cadastro_icon.png" style="width: 300px;" />
             </label>
             <input type="file" name="perfil" id="perfil" style="display:none" />
             <div class="input-container">
-                <input type="text" name="email" placeholder="Email" id="email" />
+                <input type="text" name="email" placeholder="Email" id="email" required />
             </div>
             <div class="input-container">
-                <input type="password" name="senha" placeholder="Senha" id="senha" />
+                <input type="password" name="senha" placeholder="Senha" id="senha" required />
             </div>
             <div class="input-container">
-                <input type="text" name="nome" placeholder="Nome" id="nome" />
+                <input type="text" name="nome" placeholder="Nome" id="nome" required />
             </div>
             <div class="input-container">
-                <input type="text" name="gênero" placeholder="Gênero" id="genero" />
+                <input type="text" name="gênero" placeholder="Gênero" id="genero" required />
             </div>
             <div class="input-container">
-                <input type="text" name="cargo" placeholder="Cargo" id="cargo" />
+                <input type="text" name="cargo" placeholder="Cargo" id="cargo" required />
             </div>
-            <a href="./login.html" id="login-link"><b>Já possui conta? Acesse aqui</b></a>
-            <button class="cadastrar">Cadastrar</button>
+            <a href="./login.html" class="redirect-link"><b>Já possui conta? Acesse aqui</b></a>
+            <button class="submit">Cadastrar</button>
 
         </form>
     </div>
