--- a/backend/frontend/pages/html/login.html
+++ b/backend/frontend/pages/html/login.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>PT CJR</title>
-        <meta charset="utf-8" />
-        <link rel="stylesheet" href="../css/style_login.css" type="text/css" />
-    </head>
-    <body>
-        <div class="cabecalho">
-            <button class="login">Entrar</button>
-            <button class="singup">Criar conta</button>
-            <div class="logo">
+
+<head>
+    <title>PT CJR</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="../css/style.css" type="text/css" />
+    <link rel="stylesheet" href="../css/login_form.css" type="text/css" />
+</head>
+
+<body>
+    <header class="cabecalho">
+        <a href="./feed_deslogado.html">
+            <span class="logo">
+                <img src="../../src/imagens/Logo_CJR.png" />
+            </span>
+        </a>
+
+        <nav>
+            <a href="./cadastro.html"><button class="link signup">Criar conta</button></a>
+            <a href="./login.html"><button class="link login">Entrar</button></a>
+        </nav>
+    </header>
+    <div class="main">
+        <form class="form">
+            <img src="../../src/imagens/profile_icon.png" style="width: 200px;" />
+            <div class="input-container">
+                <input type="text" name="login" placeholder="Login" />
             </div>
-        </div>
-        <div class="corpo">
-            <div class="form">
-                <form>
-                    <div class="input-container">
-                        <input type="text" name="login" placeholder="Login"/>
-                    </div>
-                    <div class="input-container">
-                        <input type="password" name="senha" placeholder="Senha"/>
-                    </div>
-                        <a href="http://">Esqueceu a senha?</a>
-                        <button class="Entrar">Entrar</button>                    
-                </form>
+            <div class="input-container">
+                <input type="password" name="senha" placeholder="Senha" />
             </div>
-        </div>
-    </body>
+            <a href="" class="redirect-link">Esqueceu a senha?</a>
+            <button class="submit">Entrar</button>
+        </form>
+    </div>
+</body>
+
 </html>
