modal restando apenas detalhes

--- a/frontend/pages/html/modal_post.html
+++ b/frontend/pages/html/modal_post.html
@@ -7,9 +7,32 @@
     </head>
     <body>
         <div class="modal">
-            <button class="publicar">Publicar</button>
-            <button class="cancelar">Cancelar</button>
-            <input type="text" />
+            <div class= "comentario">
+                <div class="opcoes">
+                    <button class="negrito" type="submit" >
+                        <img src="../../src/imagens/negrito.png" >
+                    </button>
+                    <button class="italico" type="submit">
+                        <img src="../../src/imagens/italic.png">
+                    </button>
+                    <button class="h" type="submit">
+                        <img src="../../src/imagens/h.png">
+                    </button>
+                    <button class="imagem" type="submit">
+                        <img src="../../src/imagens/img.png">
+                    </button>
+                    <button class="duvida" type="submit" >
+                        <img src="../../src/imagens/question-circle.png">
+                    </button>
+                </div>
+                <input type="text" class="texto"/>
+            </div>
+            <div>
+                <button class="publicar" >Publicar</button>
+            </div>
+            <div>
+                <button class="cancelar">Cancelar</button>
+            </div>
         </div>
     </body>
 
