--- a/frontend/pages/html/modal_comentario.html
+++ b/frontend/pages/html/modal_comentario.html
@@ -34,7 +34,7 @@
                 <input type="text" class="texto"/>
             </div>
             <div>
-                <button class="publicar" >Publicar</button>
+                <button class="publicar" >Comentar</button>
             </div>
             <div>
                 <button class="cancelar">Cancelar</button>
