:sparkle: feat: Add Page Router and JSON Request on POST

--- a/backend/frontend/pages/html/cadastro.html
+++ b/backend/frontend/pages/html/cadastro.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>PT CJR</title>
+    <title>CJR Net - Signup</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
     <link rel="stylesheet" href="../css/signup_form.css" type="text/css" />
@@ -10,7 +10,8 @@
 
 <body>
     <header class="cabecalho">
-        <a href="./feed_deslogado.html">
+        <!--Sávio Henrique-->
+        <a href="/">
             <span class="logo">
                 <img src="../../src/imagens/Logo_CJR.png" />
             </span>
@@ -21,7 +22,8 @@
             <a href="./login.html"><button class="link login">Entrar</button></a>
         </nav>
     </header>
-    <div class="main">
+    <section class="main">
+        <!-- Sávio Henrique -->
         <span class="hero-logo">
             <img src="../../src/imagens/Logo_CJR_branco.png" style="width:120%">
         </span>
@@ -49,7 +51,7 @@
             <button class="submit">Cadastrar</button>
 
         </form>
-    </div>
+    </section>
     <script src="../js/signup.js"></script>
 </body>
 
