--- a/backend/frontend/pages/html/index.html
+++ b/backend/frontend/pages/html/index.html
@@ -2,15 +2,16 @@
 <html lang="pt-br">
 
 <head>
+    <title>CJR Net - Feed</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
     <link rel="stylesheet" href="../css/feed.css" type="text/css" />
-    <title>CJR Net - Feed</title>
 </head>
 
 <body>
     <header class="cabecalho">
+        <!-- Sávio Henrique -->
         <a href="./feed_deslogado.html">
             <span class="logo">
                 <img src="../../src/imagens/Logo_CJR.png" />
@@ -23,6 +24,7 @@
         </nav>
     </header>
     <section class="main">
+        <!-- Sávio Henrique -->
         <div class="feed">
             <div class="title-container">
                 <h1 class="title">Publicações</h1>
