--- a/backend/frontend/pages/html/feed_logado.html
+++ b/backend/frontend/pages/html/feed_logado.html
@@ -11,6 +11,7 @@
 
 <body>
     <header class="cabecalho">
+        <!-- Sávio Henrique -->
         <a href="./feed_deslogado.html">
             <span class="logo">
                 <img src="../../src/imagens/Logo_CJR.png" />
@@ -23,6 +24,7 @@
         </nav>
     </header>
     <section class="main">
+        <!-- Sávio Henrique -->
         <div class="feed">
             <div class="title-container">
                 <h1 class="title">Publicações</h1>
