--- a/backend/frontend/pages/html/login.html
+++ b/backend/frontend/pages/html/login.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>PT CJR</title>
+    <title>CJR Net - Login</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
     <link rel="stylesheet" href="../css/login_form.css" type="text/css" />
@@ -15,13 +15,13 @@
                 <img src="../../src/imagens/Logo_CJR.png" />
             </span>
         </a>
-
         <nav>
             <a href="./cadastro.html"><button class="link signup">Criar conta</button></a>
             <a href="./login.html"><button class="link login">Entrar</button></a>
         </nav>
     </header>
-    <div class="main">
+    <section class="main">
+        <!-- Wallysson -->
         <form class="form">
             <img src="../../src/imagens/profile_icon.png" style="width: 200px;" />
             <div class="input-container">
@@ -33,7 +33,7 @@
             <a href="" class="redirect-link">Esqueceu a senha?</a>
             <button class="submit">Entrar</button>
         </form>
-    </div>
+    </section>
 </body>
 
 </html>
