feat: login tratamento de erro

--- a/backend/frontend/pages/html/feed_deslogado.html
+++ b/backend/frontend/pages/html/feed_deslogado.html
@@ -20,7 +20,7 @@
 
         <nav>
             <a href="./cadastro.html"><button class="link signup">Criar conta</button></a>
-            <a href="./feed_logado.html"><button class="link login">Entrar</button></a>
+            <a href="./login.html"><button class="link login">Entrar</button></a>
         </nav>
     </header>
     <section class="main">
