--- a/backend/frontend/pages/html/login.html
+++ b/backend/frontend/pages/html/login.html
@@ -22,18 +22,19 @@
     </header>
     <section class="main">
         <!-- Wallysson -->
-        <form class="form">
+        <form class="form" id="form">
             <img src="../../src/imagens/profile_icon.png" style="width: 200px;" />
+            <span id='error-hidden'></span>
             <div class="input-container">
-                <input type="text" name="login" placeholder="Login" />
+                <input type="text" name="login" id="login" placeholder="Login" />
             </div>
             <div class="input-container">
-                <input type="password" name="senha" placeholder="Senha" />
+                <input type="password" name="senha" id="senha" placeholder="Senha" />
             </div>
             <a href="" class="redirect-link">Esqueceu a senha?</a>
-            <button class="submit">Entrar</button>
+            <button class="submit" id="submit-btn">Entrar</button>
         </form>
     </section>
 </body>
-
+<script src="../js/signin.js"></script>
 </html>
