feat: página login funcionando com autenticação por token

--- a/backend/frontend/pages/html/cadastro.html
+++ b/backend/frontend/pages/html/cadastro.html
@@ -48,7 +48,7 @@
                 <input type="text" name="cargo" placeholder="Cargo" id="cargo" required />
             </div>
             <a href="./login.html" class="redirect-link"><b>Já possui conta? Acesse aqui</b></a>
-            <button class="submit">Cadastrar</button>
+            <button class="submit" id="submit">Cadastrar</button>
 
         </form>
     </section>
