:wrench: fix: Fixed error display on signup

--- a/backend/frontend/pages/html/cadastro.html
+++ b/backend/frontend/pages/html/cadastro.html
@@ -47,6 +47,7 @@
             <div class="input-container">
                 <input type="text" name="cargo" placeholder="Cargo" id="cargo" required />
             </div>
+            <span id='error-hidden'></span>
             <a href="./login.html" class="redirect-link"><b>Já possui conta? Acesse aqui</b></a>
             <button class="submit" id="submit">Cadastrar</button>
 
