--- a/backend/frontend/pages/html/cadastro.html
+++ b/backend/frontend/pages/html/cadastro.html
@@ -18,8 +18,8 @@
         </a>
 
         <nav>
-            <a href="./cadastro.html"><button class="link signup">Criar conta</button></a>
-            <a href="./login.html"><button class="link login">Entrar</button></a>
+            <a href="cadastro.html"><button class="link signup">Criar conta</button></a>
+            <a href="login.html"><button class="link login">Entrar</button></a>
         </nav>
     </header>
     <section class="main">
