:sparkle: feat: Added logged navigation

--- a/backend/frontend/pages/html/cadastro.html
+++ b/backend/frontend/pages/html/cadastro.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <script src="../js/isAuth.js"></script>
     <header class="cabecalho">
         <!--Sávio Henrique-->
         <a href="/">
