--- a/backend/frontend/pages/html/login.html
+++ b/backend/frontend/pages/html/login.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
+    <script src="../js/isAuth.js"></script>
     <header class="cabecalho">
-        <a href="./feed_deslogado.html">
+        <a href="/">
             <span class="logo">
                 <img src="../../src/imagens/Logo_CJR.png" />
             </span>
