--- a/backend/frontend/pages/html/index.html
+++ b/backend/frontend/pages/html/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <script src="../js/isAuth.js"></script>
     <header class="cabecalho">
         <!-- Sávio Henrique -->
         <a href="/">
